# yandex-practicum-rust-3

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
client/: Cargo.toml  build.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client/: Cargo.toml  build.rs
crates/client/src/: error.rs  grpc_client.rs  http_client.rs  lib.rs
crates/server/: .env.example  Cargo.toml  build.rs
crates/server/.sqlx/: query-094ec59238eac7f2f105f788f7da9fae1ab5831c5817dc900465ab94d0047bbc.json  query-178083b420b043e3a17ab56363067049604c3935e45269b9642d647b1d58b599.json  query-27d6b368609e2350887e13138f71f7b64b996a528435a84b16c1ac74f5cda003.json  query-2b2a7011ba8afba6d4c168fca29359c64c454c6b55e4d125a507bcfdd5dca771.json  query-460c7b836470e458e33c895243dfa742c28c37f36d8216dfca5b0c696042b0c4.json  query-5ef01c111237b7983953f152935141aec6ce66ce104213dca777ced971d85f78.json  query-620de11cec17edcf5b94e33fec6a819741092197a8e1ec49d5520ccecf1f7985.json  query-6d6a027b85a4500634564864bcc590329070120500cac1180093788c64424c88.json  query-def49e57a5c7af03c7dcf7bd5f74cde57930f2c6c3bdc177f9ba0ad1c7b38a62.json  query-e4af837ac0afa894861bac8c8947093d7188fbe01dadb539d48e469d8954ef3b.json
crates/server/migrations/: 20250222_0001_init.sql  20250227_0001_add_post_index.sql
crates/server/src/: error.rs  lib.rs  main.rs  state.rs
crates/server/src/application/: post_service.rs  user_service.rs
crates/server/src/data/: post_repo.rs  user_repo.rs  users_repo.rs
crates/server/src/domain/: mod.rs  post.rs  user.rs
crates/server/src/infrastructure/: config.rs  cors.rs  db.rs  jwt.rs  migrate.rs  mod.rs  security.rs  tracing.rs
crates/server/src/presentation/: mod.rs  proto.rs  routes.rs
crates/server/src/presentation/grpc/: error.rs  jwt.rs  mod.rs  post_service.rs  user_service.rs  utils.rs
crates/server/src/presentation/http/: error.rs  jwt.rs  mod.rs  post_router.rs  user_router.rs
crates/server/src/presentation/routes/: users.rs
crates/wasm/: Cargo.toml  build.rs  index.html
crates/wasm/src/: api.rs  app.rs  main.rs  navigation.rs  utils.rs
crates/wasm/src/components/: button.rs  login.rs  mod.rs  notifications.rs  post.rs  posts.rs
crates/wasm/src/domain/: mod.rs
crates/wasm/src/state/: mod.rs  notifications.rs
proto/: blog.proto
server/: Cargo.toml  build.rs
