[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
axum = "0.8.8"
clap = "4.5.60"
dotenvy = "0.15.7"
jsonwebtoken = "10.3.0"
pbjson-types = "0.9.0"
prost = "0.14.3"
prost-types = "0.14.3"
reqwest = "0.13.2"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = "0.8.6"
thiserror = "2.0.18"
time = "0.3.47"
tokio = "1.49.0"
tonic = "0.14.5"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = "1.21.0"
