[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
client = { path = "../client" }
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
time = { version = "0.3.47", features = ["formatting", "parsing", "serde"] }
uuid = { version = "1.21.0", features = ["v7"] }
