[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
prost.workspace = true
prost-types.workspace = true
reqwest = { workspace = true, features = ["json", "query"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic.workspace = true
tonic-prost.workspace = true
uuid = { workspace = true, features = ["serde", "v7"] }

[build-dependencies]
anyhow.workspace = true
tonic-prost-build.workspace = true
