[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
prost = "0.14.3"
prost-types = "0.14.3"
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde"] }
tokio = "1.49.0"
tonic = "0.14.5"
tonic-prost = "0.14.5"
uuid = { version = "1.21.0", features = ["serde", "v7"] }

[build-dependencies]
anyhow = "1.0.102"
tonic-prost-build = "0.14.5"
