[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
argon2 = { workspace = true, features = ["std"] }
axum.workspace = true
dotenvy.workspace = true
jsonwebtoken = { workspace = true, features = ["rust_crypto"] }
pbjson-types.workspace = true
prost.workspace = true
prost-types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio",
    "time",
    "uuid",
] }
time = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic.workspace = true
tonic-prost.workspace = true
tower-http = { workspace = true, features = ["cors"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { workspace = true, features = ["serde", "v7"] }

[build-dependencies]
anyhow.workspace = true
tonic-prost-build.workspace = true
