[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
gloo-net = "0.6.0"
gloo-storage = "0.3.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
leptos = { version = "0.8.16", features = ["csr"] }
leptos_router = "0.8.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.21.0", features = ["v4", "js"] }

[build-dependencies]
dotenvy = "0.15.7"
